1.6.3
* Lib: Inteface to TheBlueMatt's block_validator tests - see https://github.com/piotrnar/btc_block_validator
* WebUI/Miners: Removed BIP100 voting stats
* WebUI/Miners: Block version numbers are shown in a table, from a span of the consensus window

1.6.2 - 2016-04-12
* Client: fixed crash on calling the consensus lib with empty pkscript
* Lib: Several compatibility fixes in the consensus checks on the block level
* Client: getheadres uses genesis block if no locator has been found
* Qdb: Memory bindings for Windows and Linux are being used automatically
* Client: each input's script is checked in a parallell for accepting tx to mempool
* Lib: simplified the way tx's inputs are checked in parallell goroutines

1.6.1 - 2016-04-06
* Client: network queue for txs processing increased to 2000
* Client: WebUI/Transactions - The fees chart shows age of a transaction (on hovering)
* Downloader: excessive memory consumption shall no longer be an issue
* Client: some changes in how the core's consensus lib is called, as it had been giving false positives

1.6.0 - 2016-03-30
* Client: added option to use bitcoin's consensus lib for ensuring that scripts are processed properly
* Qdb: Writing the entire database content (e.g. during defrag) is much faster now
* Client: peer's send buffer made as a static circular buffer (with max size of 4MB)
* Client: improved bandwidth statistics
* New tool "bdb", for managing and deframenting the blocks database
* Lib: check each new block for MAX_BLOCK_SIGOPS
* Lib: check for merkle tree malleability (CVE-2012-2459) when accepting block
* Client: RPC API for mining (supports "getblocktemplate", "validateaddress" and "submitblock")
* Lib: fixed a critical issue of accepting a block hash which does not match the bits field from teh header
* Lib: fixed issue with recalculating difficulty each 2016 blocks that was appearing on testnet3
* Lib: script.VerifyTxScript() counts number of sigops when called with COUNT_SIGOPS flag