@@ -342,13 +342,24 @@ function selectadr(idx) {
 	recalc_inputs()
 }
 
+function final_clicked() {
+	if (final_checkbox.checked) {
+		tx_seq.value = -2
+		tx_seq.readOnly = true
+		tx_seq.style.backgroundColor = '#c0c0c0'
+	} else {
+		tx_seq.value = 0
+		tx_seq.readOnly = false
+		tx_seq.style.backgroundColor = '#ffffff'
+	}
+}
+
 document.addEventListener('DOMContentLoaded', function() {
 	build_change_list()
 	add_new_output()
 	txfee.onchange = recalc_to_pay
 	txfee.onkeyup = recalc_to_pay
 	spb_to_use.value = avg_fee_spb.toFixed(10).substr(0,7)
-	tx_seq.value = parseInt((new Date().getTime())/1000)
 	recalc_inputs()
 })
 
@@ -363,7 +374,7 @@ Selected amount: <b id="selval">0.00000000</b> BTC in <b id="selcnt">0</b> outpu
 	<th>&nbsp;
 	<th>Pay to address
 	<th>Amount BTC
-    <th>
+	<th>
 	<th><i>... mBTC</i>
 </tr>
 
@@ -373,7 +384,9 @@ Selected amount: <b id="selval">0.00000000</b> BTC in <b id="selcnt">0</b> outpu
 	<td><a href="javascript:add_new_output()" title="Add another output">+add output</a>
 	|
 	<a href="javascript:del_last_output()" title="Remove last output">-remove last</a>
-	<td align="center" title="Transaction sequence for RBF purpose">Sequence : <input name="tx_seq" id="tx_seq" class="mono r" size="10">
+	<td align="center" title="Transaction sequence for RBF purpose">Sequence : <input name="tx_seq" id="tx_seq" class="mono r" size="2" value="0">
+	&nbsp;&bull;&nbsp;
+	<span onclick="final_checkbox.click()" style="cursor:pointer">Final</span><input onchange="final_clicked()" type="checkbox" id="final_checkbox">
 	<td align="right">Transaction fee:
 	</table>
 	<td><input type="text" id="txfee" name="txfee" size="13" class="mono r" value="0.0001" onchange="recalc_to_pay" onkeyup="recalc_to_pay">
