@@ -224,6 +224,7 @@ function val2reason(r) {
 		case 207: return "BAD_INPUT"
 		case 208: return "NOT_MINED"
 		case 209: return "CB_INMATURE"
+		case 210: return "RBF_LOWFEE"
 	}
 	return r
 }
